# remouseable-rerusted

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: pr-workflow.yaml  tag-workflow.yaml
fixtures/: representative-events.hex
obsidian-vault/: 000 - Project Index.md  Project Dashboard.base
obsidian-vault/.obsidian/: app.json  core-plugins.json  workspace.json
obsidian-vault/Projects/: reMouseable AI Handoff.md  reMouseable Rust Migration.md
src/: app.rs  driver.rs  event.rs  lib.rs  main.rs  pen.rs  runtime.rs  scale.rs  ssh.rs  state.rs  ui.rs  windows_pen.rs
technical-documentation/: README.md
tests/: representative_stream.rs
ui/: remouseable.slint
